<resources>
    <string name="app_name">AndroidTraining</string>
    <!-- TrainingTextView-->
    <string name="see_you">See You!!</string>
    <!-- TrainingListView-->
    <string-array name="week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- EditText 1 -->
    <string name="edit_text_1_text_view">Display text here</string>
    <string name="edit_text_1_button">Display</string>
    <string name="edit_text_1_edit_text_hint">Please input text</string>
    <!-- SharedPreference 1 -->
    <string name="sp1_save">save</string>
    <string name="sp1_display">display</string>
    <string name="sp1_edit_text_hint">Please input text</string>
    <!-- CheckBox 1 -->
    <string name="cb1_text">Click check box</string>
    <string name="cb1_check_on">チェックが付きました</string>
    <string name="cb1_check_off">チェックが消えました</string>
    <!-- Activity 1 -->
    <!-- Activity 2 -->
    <string name="activity_2_text">メイン画面です</string>
    <string name="activity_2_button">Sub画面へ</string>
    <string name="activity_2_text_sub">サブ画面です</string>
    <string name="activity_2_button_sub">Main画面へ</string>
    <!-- Dialog 1 -->
    <string name="dialog_1_title">Dialog title</string>
    <string name="dialog_1_message">Dialog text</string>
    <string name="dialog_1_alert_dialog">Alert</string>
    <!-- Dialog 2 -->
    <string name="dialog_2_date_picker_dialog">Date</string>
    <!-- Dialog 3 -->
    <string name="dialog_3_time_picker_dialog">Time</string>
    <!-- Spinner 1 -->
    <string name="spinner_1_text">TextView</string>
    <string-array name="spinner_1_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <!-- Radio 1 -->
    <string name="radio_1_blood_type_a">A型</string>
    <string name="radio_1_blood_type_b">B型</string>
    <string name="radio_1_blood_type_o">O型</string>
    <string name="radio_1_blood_type_ab">AB型</string>
    <!-- ViewModel 1 -->
    <string name="vm1_button_text">Start Count UP!</string>
    <!-- ListView 2 -->
    <string name="list_item_image_description">Image</string>
</resources>